[gd_scene load_steps=3 format=3 uid="uid://cf2mywjo1f74k"]

[ext_resource type="Script" path="res://scenes/popups/new_canvas/new_canvas_confirm.gd" id="1_y5g4c"]
[ext_resource type="Script" path="res://scenes/popups/new_canvas/new_canvas_cancel.gd" id="2_mgglv"]

[node name="New_Canvas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 128.0
offset_right = -320.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="New_Canvas_Settings" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="New_Canvas_Settings_Header" type="Label" parent="Margin/New_Canvas_Settings"]
layout_mode = 2
text = "New Canvas Setttings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid_Margin" type="MarginContainer" parent="Margin/New_Canvas_Settings"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="New_Canvas_Setitngs_Grid" type="GridContainer" parent="Margin/New_Canvas_Settings/Grid_Margin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 16
columns = 2

[node name="Canvas_Name_Label" type="Label" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
layout_mode = 2
text = "Name:"

[node name="Canvas_Name_LineEdit" type="LineEdit" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter desired canvas name.."
max_length = 20

[node name="Canvas_Width_Label" type="Label" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Width:"

[node name="Canvas_Width_SpinBox" type="SpinBox" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
min_value = 8.0
max_value = 2048.0
step = 8.0
value = 8.0
rounded = true
suffix = "px"

[node name="Canvs_Height_Label" type="Label" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Height:"

[node name="Canvas_Height_Spinbox" type="SpinBox" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
min_value = 8.0
max_value = 2048.0
step = 8.0
value = 8.0
rounded = true
suffix = "px"

[node name="Canvas_Color_Label" type="Label" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
layout_mode = 2
text = "Color:"

[node name="Canvas_Color_ColorPicker" type="ColorPickerButton" parent="Margin/New_Canvas_Settings/Grid_Margin/New_Canvas_Setitngs_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
color = Color(1, 1, 1, 1)

[node name="New_Canvas_Choice_Buttons" type="HBoxContainer" parent="Margin/New_Canvas_Settings"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="New_Canvas_Confirm" type="Button" parent="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Confirm"
script = ExtResource("1_y5g4c")

[node name="New_Canvas_Cancel" type="Button" parent="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons"]
layout_mode = 2
text = "Cancel"
script = ExtResource("2_mgglv")

[connection signal="pressed" from="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons/New_Canvas_Confirm" to="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons/New_Canvas_Confirm" method="_on_pressed"]
[connection signal="pressed" from="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons/New_Canvas_Cancel" to="Margin/New_Canvas_Settings/New_Canvas_Choice_Buttons/New_Canvas_Cancel" method="_on_pressed"]
